pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: etc-pihole
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: etc-pihole
          persistentVolumeClaim:
            claimName: pihole-etc-pvc
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-pvc
