pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app: pihole
#  annotations:
#    metallb.io/loadBalancerIPs: 192.168.18.99
spec:
  type: NodePort
  ports:
#    - name: dns-udp
#      port: 53
#      protocol: UDP
#      targetPort: 53
#      nodePort: 30053
#    - name: dns-tcp
#      port: 53
#      protocol: TCP
#      targetPort: 53
#      nodePort: 30053
    - name: dns
      port: 53
      targetPort: 53
      protocol: UDP
      nodePort: 30053
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30080
  selector:
    app: pihole
