pihole/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: pihole-tcp
  namespace: pihole
spec:
  parentRefs:
    - name: traefik
      sectionName: dns-server
      kind: Gateway

  rules:
     - backendRefs:
        - name: pihole
          namespace: pihole
          port: 53
